--- a/To-Do/package.json
+++ b/To-Do/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@canvasjs/angular-charts": "^1.0.3",
+    "chart.js": "^4.4.0",
+    "ng-charts": "^1.0.0-alpha",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
