--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@canvasjs/angular-charts": "^1.0.3",
+    "@fullcalendar/angular": "^6.1.9",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
     "chart.js": "^4.4.0",
     "ng-charts": "^1.0.0-alpha",
     "rxjs": "~7.8.0",
